Fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 .page-title {
     font-size: 3.5em;
     font-weight: normal;
+    text-align: center;
 }
 
 .week-number {
